--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "task4",
+  "homepage": "https://Ahmad82-cell.github.io/task4/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +11,14 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-scripts": "5.0.1",
+    "swiper": "^12.0.3",
     "web-vitals": "^2.1.4"
   },
+  
+ 
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
