--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "task4",
-  "homepage": "https://Ahmad82-cell.github.io/Task5/",
+  "homepage": "https://Ahmad82-cell.github.io/Task5",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
